fix subject icon alignment

--- a/www/less/main/pages/content-video.less
+++ b/www/less/main/pages/content-video.less
@@ -71,6 +71,9 @@
 					cursor: default;
 					.icon-wrapper {
 						margin-top: 60px;
+						&.move-higher {
+							margin-top: 40px;
+						}
 						.icon {
 							color: @black;
 						}
