--- a/www/less/main/pages/content.less
+++ b/www/less/main/pages/content.less
@@ -27,6 +27,9 @@
 				display: table;
 				margin-right: 10px;
 				margin-top: 40px;
+				&.move-higher {
+					margin-top: 20px;
+				}
 				i {
 					text-align: center;
 					vertical-align: middle;
